# OrbitLab

./: .gitignore  BUILD  LICENSE  README.md  pants.toml  pyproject.toml  rxconfig.py
assets/: animations.css
docs/: network-diagram.md  orbitlab_screenshots.md  roadmap.md
orbitlab/: __init__.py  constants.py  data_types.py  loggers.py
orbitlab/api/lxc/: router.py
orbitlab/api/nodes/: __init__.py  models.py  router.py
orbitlab/clients/: __init__.py
orbitlab/clients/proxmox/: __init__.py  client.py  exceptions.py  models.py
orbitlab/clients/proxmox/appliances/: __init__.py  client.py  models.py
orbitlab/clients/proxmox/base/: __init__.py  client.py  models.py
orbitlab/clients/proxmox/cluster/: __init__.py  client.py  models.py
orbitlab/clients/proxmox/compute/: __init__.py  client.py  models.py
orbitlab/clients/proxmox/networks/: __init__.py  client.py  models.py
orbitlab/manifest/: __init__.py  appliances.py  autoscaling.py  base.py  client.py  cluster.py  exceptions.py  ipam.py  lxc.py  lxcs.py  networks.py  nodes.py  ref.py  secrets.py  sector.py  serialization.py
orbitlab/manifest/schemas/: __init__.py  appliances.py  base.py  cluster.py  lxcs.py  networks.py  nodes.py  sdns.py  secrets.py  serialization.py  settings.py
orbitlab/services/: __init__.py  discovery.py
orbitlab/services/discovery/: __init__.py  appliances.py  base.py  cluster.py  node.py  sdn.py
orbitlab/services/dns/: main.py
orbitlab/services/pki/: __init__.py  client.py  exceptions.py  models.py
orbitlab/services/vault/: __init__.py  client.py  exceptions.py  models.py
orbitlab/web/: __init__.py  defaults.py  main.py  splash_page.py  utilities.py
orbitlab/web/components/: __init__.py  badge.py  buttons.py  callout.py  card.py  checkbox.py  data_list.py  dialog.py  editor.py  feed.py  fieldset.py  grid_list.py  hover_card.py  input.py  logo.py  menu.py  page_header.py  popover.py  progress_bars.py  progress_panels.py  radio_group.py  select.py  selects.py  sidebar.py  slider.py  sortable.py  splash_page.py  upload.py
orbitlab/web/compute/: __init__.py  appliances.py  dashboard.py
orbitlab/web/compute/dialogs/: __init__.py  create_appliance.py  download_appliance.py
orbitlab/web/nodes/: __init__.py  dashboard.py
orbitlab/web/pages/: __init__.py  layout.py
orbitlab/web/pages/compute/: __init__.py  appliances.py  dashboard.py  layout.py
orbitlab/web/pages/compute/dialogs/: __init__.py  create_appliance.py  download_appliance.py
orbitlab/web/pages/nodes/: __init__.py  dashboard.py  layout.py  states.py
orbitlab/web/pages/secrets_pki/: __init__.py  dashboard.py  layout.py
orbitlab/web/pages/sectors/: __init__.py  layout.py
orbitlab/web/states/: __init__.py  certificates.py  cluster.py  managers.py  manifests.py  nodes.py  proxmox.py  utilities.py
(+52 files in other folders)
